--- a/app3/index.html
+++ b/app3/index.html
@@ -9,9 +9,11 @@
 <body>
     <a-scene>
         <a-assets>
-
+            <img id="sky" src="resources/clear-sunny-sky.jpg">
+            <img src="resources/ground.jpg" id="ground">
         </a-assets>
-        <a-plane position="0 0 0" rotation="-90 0 0" width="100" height="100" color="#7BC8A4"></a-plane>
+        <a-plane material="color:#7BC8A4; src:#ground; repeat: 2000 2000" position="0 0 0" rotation="-90 0 0" width="1000" height="1000" color="#7BC8A4"></a-plane>
+        <a-sky src="#sky"></a-sky>
     </a-scene>
 </body>
 </html>
